syntax = "proto3";

import "bk-bscp/internal/protocol/common/common.proto";

package connserver;

service Connection {
    rpc QueryAppMetadata(QueryAppMetadataReq) returns (QueryAppMetadataResp) {}
    rpc Access(AccessReq) returns (AccessResp) {}
    rpc SignallingChannel(stream SignallingChannelDownStream) returns (stream SignallingChannelUpStream) {}
    rpc Report(ReportReq) returns (ReportResp) {}
    rpc PullRelease(PullReleaseReq) returns (PullReleaseResp) {}
    rpc PullConfigList(PullConfigListReq) returns (PullConfigListResp) {}
    rpc Healthz(HealthzReq) returns (HealthzResp) {}
}

message QueryAppMetadataReq {
    string seq    = 1;
    string biz_id = 2;
    string app_id = 3;
}

message QueryAppMetadataResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
}

message AccessReq {
    string seq      = 1;
    string biz_id   = 2;
    string app_id   = 3;
    string cloud_id = 4;
    string ip       = 5;
    string path     = 6;
    string labels   = 7;
}

message AccessResp {
    string                   seq       = 1;
    common.ErrCode           code      = 2;
    string                   message   = 3;
    repeated common.Endpoint endpoints = 4;
}

enum SignallingChannelCmd {
    SCCMD_C2S_PING                       = 0;
    SCCMD_S2C_PONG                       = 1;
    SCCMD_S2C_PUSH_NOTIFICATION          = 2;
    SCCMD_S2C_PUSH_ROLLBACK_NOTIFICATION = 3;
    SCCMD_S2C_PUSH_RELOAD_NOTIFICATION   = 4;
}

message SCCMDPing {
    string biz_id   = 1;
    string app_id   = 2;
    string cloud_id = 3;
    string ip       = 4;
    string path     = 5;
    string labels   = 6;
    int64  timeout  = 7;
}

message SCCMDPushNotification {
    string biz_id     = 1;
    string app_id     = 2;
    string cfg_id     = 3;
    string cfg_name   = 4;
    string cfg_fpath  = 5;
    uint64 serialno   = 6;
    string release_id = 7;
}

message SCCMDPushRollbackNotification {
    string biz_id     = 1;
    string app_id     = 2;
    string cfg_id     = 3;
    string cfg_name   = 4;
    string cfg_fpath  = 5;
    uint64 serialno   = 6;
    string release_id = 7;
}

message SCCMDPushReloadNotification {
    string            biz_id      = 1;
    string            app_id      = 2;
    common.ReloadSpec reload_spec = 3;
}

message SignallingChannelDownStream {
    string               seq      = 1;
    SignallingChannelCmd cmd      = 2;
    SCCMDPing            cmd_ping = 3;
}

message SignallingChannelUpStream {
    string                        seq          = 1;
    SignallingChannelCmd          cmd          = 2;
    SCCMDPushNotification         cmd_push     = 3;
    SCCMDPushRollbackNotification cmd_rollback = 4;
    SCCMDPushReloadNotification   cmd_reload   = 5;
}

message ReportReq {
    string                     seq      = 1;
    string                     biz_id   = 2;
    string                     app_id   = 3;
    string                     cloud_id = 4;
    string                     ip       = 5;
    string                     path     = 6;
    string                     labels   = 7;
    repeated common.ReportInfo infos    = 8;
}

message ReportResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
}

message PullReleaseReq {
    string seq              = 1;
    string biz_id           = 2;
    string app_id           = 3;
    string cloud_id         = 4;
    string ip               = 5;
    string path             = 6;
    string labels           = 7;
    string cfg_id           = 8;
    string local_release_id = 9;
    string release_id       = 10;
}

message PullReleaseResp {
    string         seq          = 1;
    common.ErrCode code         = 2;
    string         message      = 3;
    bool           need_effect  = 4;
    common.Release release      = 5;
    string         content_id   = 6;
    uint32         content_size = 7;
}

message PullConfigListReq {
    string      seq    = 1;
    string      biz_id = 2;
    string      app_id = 3;
    common.Page page   = 4;
}

message PullConfigListResp {
    string                 seq     = 1;
    common.ErrCode         code    = 2;
    string                 message = 3;
    repeated common.Config configs = 4;
}

message HealthzReq {
    string seq = 1;
}

message HealthzResp {
    string                   seq     = 1;
    common.ErrCode           code    = 2;
    string                   message = 3;
    common.ModuleHealthzInfo data    = 4;
}
